Добавил более подробное описание языка стрима

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -166,6 +166,7 @@ message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
 message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
+\ud83d\udca1<b>VOICE</b> to create voice message\n\
 \ud83d\udca1<b>COMPRESS</b> to compress video\n\
 \ud83d\udca1<b>STREAM</b> to make streaming video to watch it directly in Telegram\n\
 \ud83d\udca1<b>MUTE</b> to remove audio from video\n\
@@ -247,3 +248,5 @@ Image: /vmark_img\n\
 Height: <b>{0}</b>\n\
 Transparency: <b>{1}</b>\n\
 Position: <b>{2}</b>
+message.stream.language=Language: <b>{0}</b>\n\n If the language does not match what is in the file, then <b>the problem is \
+in your video and not in me</b>. The language is taken from the video metadata.
