--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -152,6 +152,7 @@ message.vavmerge.click=Отлично! Теперь нажмите <b>Объед
 message.non.command.features=\ud83d\udca1<b>Видео формат</b> для конвертации видео в другой формат. Например: <b>MP4, MKV</b> и т. д.\n\
 \ud83d\udca1<b>Аудио формат</b> для извлечения аудио из видео. Например: <b>MP3, OPUS</b> и т. д.\n\
 \ud83d\udca1<b>Формат субтитров</b> для извлечения субтитров из видео. Например: <b>ASS, SRT, WEBVTT</b> и т. д.\n\
+\ud83d\udca1<b>VOICE</b> для создания голосового сообщения\n\
 \ud83d\udca1<b>COMPRESS</b> для сжатия видео\n\
 \ud83d\udca1<b>STREAM</b> для создания потокового видео, чтобы можно было его смотреть прямо в Телеграмм\n\
 \ud83d\udca1<b>MUTE</b> для удаления аудио из видео\n\
@@ -248,3 +249,4 @@ message.image.watermark=Ваш водяной знак:\n\
 message.watermark.queued=Будет добавлен водяной знак\n\
 Место в глобальной очереди: <b>{0}</b>
 watermark.adding.step=Водяной знак
+message.stream.language=Язык: <b>{0}</b>\n\n Если язык не совпадает с тем что в файле значит <b>проблема в вашем видео, а не во мне</b>. Язык берется из метаданных видео.
