--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -153,6 +153,7 @@ message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bo
 message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
 \ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
 \ud83d\udca1<b>Subtitr formati</b> videodan subtitrlarni chiqarish uchun. Masalan: <b>ASS, SRT, WEBVTT</b> va boshqalar.\n\
+\ud83d\udca1<b>VOICE</b> ovozli xabar yozish\n\
 \ud83d\udca1Videoni siqish uchun <b>COMPRESS</b>\n\
 \ud83d\udca1<b>STREAM</b> to'g'ridan-to'g'ri Telegram-da tomosha qilish uchun video yaratish\n\
 \ud83d\udca1<b>MUTE</b> videodan audio olib tashlash uchun\n\
@@ -251,3 +252,4 @@ Lavozim: <b>{2}</b>
 message.watermark.queued=Filigran qo''shiladi\n\
 Global navbatdagi joy: <b>{0}</b>
 watermark.adding.step=Suv belgisi
+message.stream.language=Til: <b>{0}</b>\n\n Agar til faylga mos kelmasa, u holda muammo menda emas, balki sizning videoingizda. Til video meta-ma''lumotlardan olingan.
