Еще больше отладки и исправления ошибок

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ message.mute.queued=Audio will be removed from video\n\
 Global queue position: <b>{0}</b>
 message.watermark.queued=Watermark will be added\n\
 Global queue position: <b>{0}</b>
-message.probe.queued=Metadata will be get from video\n\
+message.probe.queued=Metadata will be get from the file\n\
 Global queue position: <b>{0}</b>
 message.video.cut.queued=Video will be cut\n\
 Global queue position: <b>{0}</b>
@@ -95,10 +95,10 @@ message.dont.send.new.request=Don't send a new file, otherwise the current reque
 extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled.
 message.pdf.images.unzip.bot=Here is the archive with all images. I can't send all images directly to avoid telegram flood wait. \
 You can extract it with @SmartUnzipperBot.
-message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished choose <b>MERGE</b> on the keyboard. I can''t \
+message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished choose <b>Merge</b> on the keyboard. I can''t \
 concatenate more than <b>{1}</b> files at a time.\n\n\
 <b>Warning</b>:\nDon't send new files, otherwise the current request will be canceled.
-concatenate.command.name=MERGE
+concatenate.command.name=Merge
 concatenate.command.description=Merge pdf files
 message.concatenate.no.files=You haven''t sent files to merge. Send me <b>{0}</b> files at first.
 cancel.files.command.name=Cancel files
@@ -163,7 +163,7 @@ message.vavmerge.awaiting.video=Okay you sent the subtitles and audio, now send 
 vavmerge.command.name=Merge
 message.vavmerge.files.canceled=Files canceled. Send me a video and audio or subtitles to merge.
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
-message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
+message.video.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
 \ud83d\udca1<b>VOICE</b> to create voice message\n\
@@ -174,6 +174,13 @@ message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to
 \ud83d\udca1<b>VIDEO_NOTE</b> to create video note from video. To create a video note your video must be <b>square</b>, \
 no more than <b>60 seconds</b>, no more than <b>8MB</b> in size and must be in <b>MP4</b> format. To cut video use /vcut command\n\
 \ud83d\udca1<b>PROBE</b> to get video metadata
+message.audio.non.command.features=\ud83d\udca1<b>Audio format</b> to convert audio to another format. For example: <b>MP3, WAV</b> etc.\n\
+\ud83d\udca1<b>VOICE</b> to create voice message\n\
+\ud83d\udca1<b>COMPRESS</b> to compress audio\n\
+\ud83d\udca1<b>PROBE</b> to get audio metadata
+message.audio.probe.result=Format: <b>{0}</b>\n\
+Length: <b>{1}</b>\n\
+Size: <b>{2}</b>
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
