--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -150,7 +150,7 @@ message.vavmerge.awaiting.video=Xo'sh, siz subtitr va audio xabar yubordingiz, e
 vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yoki subtitrlar yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
-message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
+message.video.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
 \ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
 \ud83d\udca1<b>Subtitr formati</b> videodan subtitrlarni chiqarish uchun. Masalan: <b>ASS, SRT, WEBVTT</b> va boshqalar.\n\
 \ud83d\udca1<b>VOICE</b> ovozli xabar yozish\n\
@@ -161,6 +161,13 @@ message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa for
 \ud83d\udca1<b>VIDEO_NOTE</b> dumaloq video yaratish. Dumaloq videoni yaratish uchun videongiz <b> kvadrat </b>, \
 bo'lishi kerak <b>60 soniyadan</b>, <b>8MB</b> va <b>MP4</b>formatidan oshmasligi kerak. Videoni qisqartirish uchun /vcut buyrug'idan foydalaning\n\
 \ud83d\udca1Video metama'lumotlarni olish uchun <b>PROBE</b>
+message.audio.non.command.features=\ud83d\udca1<b>Ovoz formati</b> ovozni boshqa formatga o'tkazish uchun. Masalan: <b>MP3, WAV</b> va boshqalar.\n\
+\ud83d\udca1<b>VOICE</b> ovozli xabar yozish\n\
+\ud83d\udca1Audioni siqish uchun <b>COMPRESS</b>\n\
+\ud83d\udca1Audio metama'lumotlarni olish uchun <b>PROBE</b>
+message.audio.probe.result=Formatlash: <b>{0}</b>\n\
+Uzunlik: <b>{1}</b>\n\
+Hajmi: <b>{2}</b>
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
@@ -178,7 +185,7 @@ message.vmake.queued=Video audio va rasmdan <b>{0}</b> formatida yaratiladi\n\
 Global navbatdagi joy: <b>{1}</b>
 message.mute.queued=Videodan audio olib tashlanadi\n\
 Global navbatdagi joy: <b>{0}</b>
-message.probe.queued=Metadata video orqali olinadi\n\
+message.probe.queued=Meta-ma''lumot fayldan olinadi\n\
 Global navbatdagi joy: <b>{0}</b>
 message.video.cut.queued=Video qisqartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
