Восстановление стейта водяного знака

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -257,3 +257,4 @@ Transparency: <b>{1}</b>\n\
 Position: <b>{2}</b>
 message.stream.language=Language: <b>{0}</b>\n\n If the language does not match what is in the file, then <b>the problem is \
 in your video and not in me</b>. The language is taken from the video metadata.
+message.stream.language.unknown=There is no language information in the video metadata
