--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -256,4 +256,5 @@ message.image.watermark=Ваш водяной знак:\n\
 message.watermark.queued=Будет добавлен водяной знак\n\
 Место в глобальной очереди: <b>{0}</b>
 watermark.adding.step=Водяной знак
+message.stream.language.unknown=Информация о языке в метаданных видео отсутствует
 message.stream.language=Язык: <b>{0}</b>\n\n Если язык не совпадает с тем что в файле значит <b>проблема в вашем видео, а не во мне</b>. Язык берется из метаданных видео.
