--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -259,4 +259,5 @@ Lavozim: <b>{2}</b>
 message.watermark.queued=Filigran qo''shiladi\n\
 Global navbatdagi joy: <b>{0}</b>
 watermark.adding.step=Suv belgisi
+message.stream.language.unknown=Video meta-ma'lumotlarda til haqida ma'lumot yo'q
 message.stream.language=Til: <b>{0}</b>\n\n Agar til faylga mos kelmasa, u holda muammo menda emas, balki sizning videoingizda. Til video meta-ma''lumotlardan olingan.
