Добавил инфу о количестве стримов при пробировании

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -192,7 +192,9 @@ message.video.probe.result=Format: <b>{0}</b>\n\
 Resolution: <b>{1}</b>\n\
 Width<b>x</b>Height: <b>{2}</b>\n\
 Length: <b>{3}</b>\n\
-Size: <b>{4}</b>
+Size: <b>{4}</b>\n\
+Audio streams count: <b>{5}</b>\n\
+Subtitles count: <b>{6}</b>
 message.non.command.features.header=Send me a video to get started and choose:
 message.cut.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
 message.video.already.square=\u2757\ufe0fVideo already square with width and height <b>{0}</b>. To create video note resend me the video and choose <b>VIDEO_NOTE</b> on the keyboard.
