--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -178,7 +178,9 @@ message.video.probe.result=Формат: <b>{0}</b>\n\
 Разрешение: <b>{1}</b>\n\
 Ширина<b>x</b>Высота: <b>{2}</b>\n\
 Длина: <b>{3}</b>\n\
-Размер: <b>{4}</b>
+Размер: <b>{4}</b>\n\
+Количество аудио потоков: <b>{5}</b>\n\
+Количество субтитров: <b>{6}</b>
 message.non.command.features.header=Отправьте мне видео для начала и выберите:
 message.vmake.queued=Будет создано видео из аудио и картинки в формате <b>{0}</b>\n\
 Место в глобальной очереди: <b>{1}</b>
