--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -179,7 +179,9 @@ message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
 Kenglik<b>x</b>Balandlik: <b>{2}</b>\n\
 Uzunlik: <b>{3}</b>\n\
-Hajmi: <b>{4}</b>
+Hajmi: <b>{4}</b>\n\
+Audio oqimlar soni: <b>{5}</b>\n\
+Subtitrlar soni: <b>{6}</b>
 message.non.command.features.header=Boshlash uchun menga video yuboring va tanlang:
 message.vmake.queued=Video audio va rasmdan <b>{0}</b> formatida yaratiladi\n\
 Global navbatdagi joy: <b>{1}</b>
