Добавил информацию по новым командам

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -260,3 +260,7 @@ Position: <b>{2}</b>
 message.stream.language=Language: <b>{0}</b>\n\nIf the language does not match what is in the file, then <b>the problem is \
 in your video and not in me</b>. The language is taken from the video metadata.
 message.stream.language.unknown=There is no language information in the video metadata
+vmark.command.description=add watermark to video
+vmerge.command.description=merge videos
+cut.audio.command.description=cut audio
+amerge.command.description=merge audios
