--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -259,4 +259,8 @@ message.watermark.queued=Будет добавлен водяной знак\n\
 Место в глобальной очереди: <b>{0}</b>
 watermark.adding.step=Водяной знак
 message.stream.language.unknown=Информация о языке в метаданных видео отсутствует
+vmark.command.description=добавить водяной знак на видео
+vmerge.command.description=объединить видео файлы
+cut.audio.command.description=обрезать аудио
+amerge.command.description=объединить аудио
 message.stream.language=Язык: <b>{0}</b>\n\nЕсли язык не совпадает с тем что в файле значит <b>проблема в вашем видео, а не во мне</b>. Язык берется из метаданных видео.
