--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -262,4 +262,8 @@ message.watermark.queued=Filigran qo''shiladi\n\
 Global navbatdagi joy: <b>{0}</b>
 watermark.adding.step=Suv belgisi
 message.stream.language.unknown=Video meta-ma'lumotlarda til haqida ma'lumot yo'q
+vmark.command.description=videoga moybo'yoqli belgi qo'shing
+vmerge.command.description=video fayllarni birlashtirish
+cut.audio.command.description=ovozni qisqartirish
+amerge.command.description=ovozni birlashtirish
 message.stream.language=Til: <b>{0}</b>\n\nAgar til faylga mos kelmasa, u holda muammo menda emas, balki sizning videoingizda. Til video meta-ma''lumotlardan olingan.
