--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,7 +113,7 @@ message.audio.compress.welcome=Send me an audio to compress. Only the last sent 
 message.audio.compress.file.not.found=At first send me an audio to compress
 message.audio.compression.choose.bitrate=Choose a <b>bitrate</b> on the keyboard and click <b>Compress</b>
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
-compress.audio.command.description=Compress audio
+compress.audio.command.description=compress audio
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
 message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
@@ -195,7 +195,8 @@ Length: <b>{3}</b>\n\
 Size: <b>{4}</b>\n\
 Audio streams count: <b>{5}</b>\n\
 Subtitles count: <b>{6}</b>
-message.non.command.features.header=Send me a video to get started and choose:
+message.non.command.video.features.header=Send me a video to get started and choose:
+message.non.command.audio.features.header=Send me an audio to get started and choose:
 message.cut.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
 message.video.already.square=\u2757\ufe0fVideo already square with width and height <b>{0}</b>. To create video note resend me the video and choose <b>VIDEO_NOTE</b> on the keyboard.
 message.square.caption=Video''s width and height <b>{0}</b>. To create video note resend me the video and choose <b>VIDEO_NOTE</b> on the keyboard.
