--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -182,7 +182,8 @@ Uzunlik: <b>{3}</b>\n\
 Hajmi: <b>{4}</b>\n\
 Audio oqimlar soni: <b>{5}</b>\n\
 Subtitrlar soni: <b>{6}</b>
-message.non.command.features.header=Boshlash uchun menga video yuboring va tanlang:
+message.non.command.video.features.header=Boshlash uchun menga video yuboring va tanlang:
+message.non.command.audio.features.header=Boshlash uchun menga audio yuboring va tanlang:
 message.vmake.queued=Video audio va rasmdan <b>{0}</b> formatida yaratiladi\n\
 Global navbatdagi joy: <b>{1}</b>
 message.mute.queued=Videodan audio olib tashlanadi\n\
