Сделал возможным мержить сколь угодно аудио и субтитров с видео + настройки мержа

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,19 +150,12 @@ message.vaimake.awaiting.audio=Okay you sent image, now send me an <b>audio</b>
 vaimake.command.name=Make a video
 message.vaimake.files.canceled=Files canceled. Send me an audio and image to make a video.
 message.vaimake.click=Great! Now click <b>Make a video</b> on the keyboard
-message.vavmerge.welcome=Send me <b>video</b> and <b>audio or subtitles</b>, and click <b>Merge</b> on the keyboard for \
-replace or add audio to video and also add subtitles to video
-message.vavmerge.awaiting.video.subtitles=Okay you sent audio, now send me a <b>video or subtitles</b>
-message.vavmerge.awaiting.audio.subtitles=Okay you sent video, now send me an <b>audio or subtitles</b>
-message.vavmerge.awaiting.video.audio=Okay you sent subtitles, now send me an <b>audio or video</b>
-message.vavmerge.awaiting.subtitles=Okay you sent the video and audio, \
-now send me a <b>subtitles or click Merge on the keyboard to merge video and audio</b>
-message.vavmerge.awaiting.audio=Okay you sent the video and subtitles, \
-now send me an <b>audio or click Merge on the keyboard to merge video and subtitles</b>
-message.vavmerge.awaiting.video=Okay you sent the subtitles and audio, now send me a <b>video</b>
+message.vavmerge.welcome=Send me <b>video</b> and <b>audio or subtitles</b>, and click <b>Merge</b> on the keyboard. \
+I can handle only max <b>{0} audios and {1} subtitles</b> at the time.
+message.vavmerge.awaiting.audio.subtitles=Send me <b>audio or subtitles</b> to merge with video
+message.vavmerge.awaiting.video=Send me <b>video</b> to merge
 vavmerge.command.name=Merge
 message.vavmerge.files.canceled=Files canceled. Send me a video and audio or subtitles to merge.
-message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
 message.video.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
@@ -265,3 +258,11 @@ vmark.command.description=add watermark to video
 vmerge.command.description=merge videos
 cut.audio.command.description=cut audio
 amerge.command.description=merge audios
+message.merge.settings=Choose merge settings on the keyboard and click <b>Start</b>\n\n\
+Audios: <b>{0}</b>\n\
+Subtitles: <b>{1}</b>
+message.add.audio.mode=Add audio
+message.add.subtitles.mode=Add subtitles
+message.replace.audio.mode=Replace audio
+message.replace.subtitles.mode=Replace subtitles
+vavmerge.start.command.name=Start
