--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -137,10 +137,10 @@ message.vaimake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga
 message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
 message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
-message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va \
-uchun klaviaturada <b>Birlashtirish</b> tugmasini bosing. almashtiring yoki videoga audio qo'shing, shuningdek videoga subtitr qo'shing
-message.vavmerge.awaiting.audio.subtitles=Xo'sh, siz video yubordingiz, endi menga <b>audio yoki subtitrlar</b> yuboring
-message.vavmerge.awaiting.video=Xo'sh, siz subtitr va audio xabar yubordingiz, endi menga <b>video</b> ni yuboring
+message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va <b>Birlashtirish</b> tugmasini bosing. \
+Bir vaqtning o''zida maksimal <b>{0} audio va {1}subtitrlar</b> bilan ishlashim mumkin.
+message.vavmerge.awaiting.audio.subtitles=Video bilan birlashtirish uchun menga <b>audio yoki subtitrlar</b> yuboring
+message.vavmerge.awaiting.video=Birlashtirish uchun menga <b>video</b> yuboring
 vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yoki subtitrlar yuboring.
 message.video.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
@@ -261,3 +261,11 @@ vmerge.command.description=video fayllarni birlashtirish
 cut.audio.command.description=ovozni qisqartirish
 amerge.command.description=ovozni birlashtirish
 message.stream.language=Til: <b>{0}</b>\n\nAgar til faylga mos kelmasa, u holda muammo menda emas, balki sizning videoingizda. Til video meta-ma''lumotlardan olingan.
+message.merge.settings=Birlashtiriladigan sozlamalarni tanlang va <b>Ishni boshlash</b> tugmasini bosing\n\n \
+Audio: <b>{0}</b>\n\
+Taglavhalar: <b>{1}</b>
+message.add.audio.mode=Audio qo'shish
+message.add.subtitles.mode=Subtitrlar qo'shish
+message.replace.audio.mode=Audio almashtiring
+message.replace.subtitles.mode=Subtitrlar almashtiring
+vavmerge.start.command.name=Boshlamoq
