Улучшение сообщения скачки файла

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ message.vmake.queued=Video will be created from audio and image in <b>{0}</b> fo
 Global queue position: <b>{1}</b>
 message.mute.queued=Audio will be removed from video\n\
 Global queue position: <b>{0}</b>
+message.upload.queued=File will be uploaded\n\
+Global queue position: <b>{0}</b>
 message.watermark.queued=Watermark will be added\n\
 Global queue position: <b>{0}</b>
 message.probe.queued=Metadata will be get from the file\n\
