--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -4,6 +4,8 @@ message.files.queued=Файлы будут сконвертированы в <b>
 Место в глобальной очереди: <b>{1}</b>
 message.concatenate.files.queued=Файлы будут объединены в один\n\
 Место в глобальной очереди: <b>{0}</b>
+message.upload.queued=Файл будет загружен\n\
+Место в глобальной очереди: <b>{0}</b>
 message.file.format=Формат: <b>{0}</b>
 message.file.size=Размер: <b>{0}</b>
 message.files.count=Файлов: <b>{0}</b>
