--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -4,6 +4,8 @@ message.files.queued=Fayllar bunga aylantirildi <b>{0}</b>\n\
 Global navbatdagi joy: <b>{1}</b>
 message.concatenate.files.queued=Fayllar bitta ga birlashtiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
+message.upload.queued=Fayl yuklanadi\n\
+Global navbatdagi joy: <b>{0}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Hajmi: <b>{0}</b>
 message.files.count=Fayllar soni: <b>{0}</b>
