--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -121,13 +121,15 @@ message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
-message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video result.
-message.video.edit.settings.resolution=Change resolution to: <b>{0}</b>
-message.video.edit.settings.choose.resolution=Choose video resolution on the keyboard and click <b>Change resolution</b>
-edit.video.command.description=Change resolution
+message.video.edit.welcome=Send me a video to edit. Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video result.
+message.video.edit.settings=Video edit settings\n\n\
+Resolution: <b>{0}</b>\n\
+Quality: <b>{1}</b>
+message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
+edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
 message.resolution.selected=Resolution selected
-message.send.video.to.edit=At first send me a video to change resolution
+message.send.video.to.edit=At first send me a video to edit
 message.video.will.be.edited=Video resolution will be changed\n\
 Global queue position: <b>{0}</b>
 video.editing.step=Changing resolution
@@ -135,6 +137,7 @@ video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.the.same=\u2757\ufe0fVideo already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
+message.video.crf.warn=\ud83d\udca1<i>The bigger the value, the smaller the output file size will be and the lower quality will be.</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
 message.compress.audio.bitrate.updated=Bitrate updated
@@ -268,3 +271,8 @@ message.add.subtitles.mode=Add subtitles
 message.replace.audio.mode=Replace audio
 message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
+vedit.resolution.command.name=Resolution
+vedit.crf.command.name=Crf(Quality)
+message.crf.selected=Crf selected
+message.choose.video.crf=Choose crf on the keyboard
+
