--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -107,8 +107,8 @@ message.compressed.size=Оригинальный размер: <b>{0}</b>\n\
 Размер после сжатия: <b>{1}</b>
 message.video.edit.welcome=Отправьте мне видео для изменения разрешения. Только последнее отправленное видео будет изменено. \
 Выберите на клавитуре <b>PROBE</b> для получения текущего разрешения видео.
-message.video.edit.settings.resolution=Изменить разрешение на: <b>{0}</b>
-message.video.edit.settings.choose.resolution=Выберите разрешение на клавиатуре и нажмите на <b>Изменить разрешение</b>
+message.video.edit.settings=Изменить разрешение на: <b>{0}</b>
+message.video.edit.choose.settings=Выберите разрешение на клавиатуре и нажмите на <b>Изменить разрешение</b>
 edit.video.command.description=Изменить разрешение
 message.choose.video.resolution=Выберите разрешение на клавиатуре
 message.resolution.selected=Разрешение выбрано
