--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -108,8 +108,8 @@ message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
 message.video.edit.welcome=Ruxsatni o'zgartirish uchun menga video yuboring. Faqat oxirgi yuklangan video o'zgartiriladi. \
 Joriy video o'lchamlarini olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
-message.video.edit.settings.resolution=Ruxsatni bunga o''zgartirish: <b>{0}</b>
-message.video.edit.settings.choose.resolution=Klaviaturadagi piksellar sonini tanlang va <b>Ruxsatni o'zgartirish</b> tugmasini bosing
+message.video.edit.settings=Ruxsatni bunga o''zgartirish: <b>{0}</b>
+message.video.edit.choose.settings=Klaviaturadagi piksellar sonini tanlang va <b>Ruxsatni o'zgartirish</b> tugmasini bosing
 edit.video.command.description=Ruxsatni o'zgartirish
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
 message.resolution.selected=Ruxsat tanlandi
