--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -130,12 +130,11 @@ edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
 message.resolution.selected=Resolution selected
 message.send.video.to.edit=At first send me a video to edit
-message.video.will.be.edited=Video resolution will be changed\n\
+message.video.will.be.edited=Video will be edited\n\
 Global queue position: <b>{0}</b>
-video.editing.step=Changing resolution
+video.editing.step=Editing
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
-message.video.resolution.the.same=\u2757\ufe0fVideo already has the same resolution <b>{0}</b>
 message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality.</i>
 message.video.crf.warn=\ud83d\udca1<i>The bigger the value, the smaller the output file size will be and the lower quality will be.</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
@@ -179,7 +178,7 @@ message.audio.non.command.features=\ud83d\udca1<b>Audio format</b> to convert au
 message.audio.probe.result=Format: <b>{0}</b>\n\
 Length: <b>{1}</b>\n\
 Size: <b>{2}</b>
-vedit.command.description=change video resolution
+vedit.command.description=edit video
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
 message.media.cut.welcome=Send me a {0} to cut. Click <b>PROBE</b> on the keyboard to get current {0} length.
@@ -275,4 +274,7 @@ vedit.resolution.command.name=Resolution
 vedit.crf.command.name=Crf(Quality)
 message.crf.selected=Crf selected
 message.choose.video.crf=Choose crf on the keyboard
-
+message.dont.change=Don't change
+message.choose.edit.settings=At first choose desired settings on the keyboard
+message.video.edit.result.size=Original size: <b>{0}</b>\n\
+Result size: <b>{1}</b>
