Поправил сообщения для всех локализаций

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -121,10 +121,11 @@ message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
-message.video.edit.welcome=Send me a video to edit. Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video result.
+message.video.edit.welcome=Send me a video to edit. Only the last sent video will be edited. \
+Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=Video edit settings\n\n\
 Resolution: <b>{0}</b>\n\
-Quality: <b>{1}</b>
+Crf(Quality): <b>{1}</b>
 message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
@@ -164,7 +165,8 @@ message.video.non.command.features=\ud83d\udca1<b>Video format</b> to convert vi
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
 \ud83d\udca1<b>VOICE</b> to create voice message\n\
-\ud83d\udca1<b>COMPRESS</b> to compress video\n\
+\ud83d\udca1<b>COMPRESS</b> to compress video. Use /vedit command for doing custom compression\n\
+\ud83d\udca1<b>UPLOAD</b> to upload video by the url\n\
 \ud83d\udca1<b>STREAM</b> to make streaming video to watch it directly in Telegram\n\
 \ud83d\udca1<b>MUTE</b> to remove audio from video\n\
 \ud83d\udca1<b>SQUARE</b> to make square video in MP4 format. For example, such a video can be used to create a <b>video note</b>\n\
@@ -278,3 +280,4 @@ message.dont.change=Don't change
 message.choose.edit.settings=At first choose desired settings on the keyboard
 message.video.edit.result.size=Original size: <b>{0}</b>\n\
 Result size: <b>{1}</b>
+message.only.url.can.be.uploaded=You have not sent a link to the video
