--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -99,27 +99,30 @@ message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi y
 message.audio.compress.file.not.found=Avval siqishni uchun audio yuboring
 message.audio.compression.choose.bitrate=Klaviaturadan <b>bitrate</b> ni tanlang va <b>Siqish</b> tugmasini bosing
 message.audio.compression.bitrate.out.of.range=0 dan katta qiymatni tanlang
-compress.audio.command.description=Ovozni siqish
+compress.audio.command.description=ovozni siqish
 message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus - bu eng siqilgan format. Opusga o'tish uchun <b>\u2705Opus</b> tugmasini bosing.</i>
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>Bitrate qancha past bo'lsa, chiqadigan fayl hajmi shuncha kichik va sifati past bo'ladi.</i>
 message.audio.compress.opus.estimated.size=Siqilgandan keyingi o''lcham: <b>{0}</b>
 message.audio.compress.original.size=Siqishdan oldin o''lcham: <b>{0}</b>
 message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
-message.video.edit.welcome=Ruxsatni o'zgartirish uchun menga video yuboring. Faqat oxirgi yuklangan video o'zgartiriladi. \
-Joriy video o'lchamlarini olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
-message.video.edit.settings=Ruxsatni bunga o''zgartirish: <b>{0}</b>
-message.video.edit.choose.settings=Klaviaturadagi piksellar sonini tanlang va <b>Ruxsatni o'zgartirish</b> tugmasini bosing
-edit.video.command.description=Ruxsatni o'zgartirish
+message.video.edit.welcome=Menga tahrirlash uchun video yuboring. Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. \
+Video haqida ma'lumot olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
+message.video.edit.settings=Videoni tahrirlash sozlamalari\n\n\
+Qaror: <b>{0}</b>\n\
+Crf(Sifat): <b>{1}</b>
+message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
+edit.video.command.description=Videoni tahrirlash
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
 message.resolution.selected=Ruxsat tanlandi
-message.send.video.to.edit=Birinchidan, piksellar sonini o'zgartirish uchun menga video yuboring
-message.video.will.be.edited=Video o''lchamlari o''zgartiriladi \n\
+message.send.video.to.edit=Avval tahrirlash uchun menga videoni yuboring
+message.video.will.be.edited=Video o''zgartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
-video.editing.step=Ruxsatni o'zgartirish
+video.editing.step=tahrirlash
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
 message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
+message.video.crf.warn=\ud83d\udca1<i>Qiymat qanchalik baland bo'lsa, chiqadigan fayl hajmi shuncha yuqori va sifati past bo'ladi..</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
 message.compress.audio.format.updated=Siqish formati yangilandi
@@ -162,7 +165,7 @@ message.audio.non.command.features=\ud83d\udca1<b>Ovoz formati</b> ovozni boshqa
 message.audio.probe.result=Formatlash: <b>{0}</b>\n\
 Uzunlik: <b>{1}</b>\n\
 Hajmi: <b>{2}</b>
-vedit.command.description=video piksellar sonini tahrirlash
+vedit.command.description=videoni tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
 message.media.cut.welcome=Tartibga solish uchun menga {0} yuboring. Joriy {0} uzunligini bilish uchun klaviaturadan <b>PROBE</b> -ni tanlang.
@@ -270,3 +273,12 @@ message.add.subtitles.mode=Subtitrlar qo'shish
 message.replace.audio.mode=Audio almashtiring
 message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
+message.only.url.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
+vedit.resolution.command.name=O'lchamlari
+vedit.crf.command.name=Crf(Sifati)
+message.crf.selected=Crf tanlandi
+message.choose.video.crf=Klaviaturadan crf-ni tanlang
+message.dont.change=O'zgartirmang
+message.choose.edit.settings=Birinchidan, klaviaturada kerakli sozlamalarni tanlang
+message.video.edit.result.size=Asl hajmi: <b>{0}</b>\n\
+Natija hajmi: <b>{1}</b>
