Поправил сообщения для всех локализаций

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -166,7 +166,7 @@ message.video.non.command.features=\ud83d\udca1<b>Video format</b> to convert vi
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
 \ud83d\udca1<b>VOICE</b> to create voice message\n\
 \ud83d\udca1<b>COMPRESS</b> to compress video. Use /vedit command for doing custom compression\n\
-\ud83d\udca1<b>UPLOAD</b> to upload video by the url\n\
+\ud83d\udca1<b>UPLOAD</b> to upload video by the link\n\
 \ud83d\udca1<b>STREAM</b> to make streaming video to watch it directly in Telegram\n\
 \ud83d\udca1<b>MUTE</b> to remove audio from video\n\
 \ud83d\udca1<b>SQUARE</b> to make square video in MP4 format. For example, such a video can be used to create a <b>video note</b>\n\
