Доработал извлечени видео из урл

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,7 +46,7 @@ report.command.description=Report a bug
 message.choose.type=Choose type for converting on the keyboard
 message.convert.file=Send me a file, link, text, video, audio to get started
 message.convert.document.file=Send me a file, link or text to get started
-message.convert.video.file=Send me a video to get started
+message.convert.video.file=Send me a video or direct link to a video to get started
 message.convert.audio.file=Send me an audio to get started
 message.conversion.failed=Something went wrong. The query can't be processed now. The problem will be resolved soon, and the file will be sent. \
 <b>Thank you for your patience</b>. <b>Please, report the incident to</b> <a href="https://t.me/smart_file_utils_support"> \
@@ -121,7 +121,7 @@ message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
-message.video.edit.welcome=Send me a video to edit. Only the last sent video will be edited. \
+message.video.edit.welcome=Send me a video or direct link to a video to edit. Only the last sent video will be edited. \
 Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=Video edit settings\n\n\
 Resolution: <b>{0}</b>\n\
@@ -130,7 +130,7 @@ message.video.edit.choose.settings=Choose desired settings on the keyboard and c
 edit.video.command.description=Edit video
 message.choose.video.resolution=Choose resolution on the keyboard
 message.resolution.selected=Resolution selected
-message.send.video.to.edit=At first send me a video to edit
+message.send.video.to.edit=At first send me a video or direct link to a video to edit
 message.video.will.be.edited=Video will be edited\n\
 Global queue position: <b>{0}</b>
 video.editing.step=Editing
@@ -160,7 +160,7 @@ I can handle only max <b>{0} audios and {1} subtitles</b> at the time.
 message.vavmerge.awaiting.audio.subtitles=Send me <b>audio or subtitles</b> to merge with video
 message.vavmerge.awaiting.video=Send me <b>video</b> to merge
 vavmerge.command.name=Merge
-message.vavmerge.files.canceled=Files canceled. Send me a video and audio or subtitles to merge.
+message.vavmerge.files.canceled=Files canceled. Send me a video or direct link to a video and audio or subtitles to merge.
 message.video.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
 \ud83d\udca1<b>Subtitle format</b> to extract subtitles from video. For example: <b>ASS, SRT, WEBVTT</b> etc.\n\
@@ -194,7 +194,7 @@ Length: <b>{3}</b>\n\
 Size: <b>{4}</b>\n\
 Audio streams count: <b>{5}</b>\n\
 Subtitles count: <b>{6}</b>
-message.non.command.video.features.header=Send me a video to get started and choose:
+message.non.command.video.features.header=Send me a video or direct link to a video to get started and choose:
 message.non.command.audio.features.header=Send me an audio to get started and choose:
 message.cut.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time to cut <b>from {1} to {2}</b>. Cut impossible with this options.
 message.video.already.square=\u2757\ufe0fVideo already square with width and height <b>{0}</b>. To create video note resend me the video and choose <b>VIDEO_NOTE</b> on the keyboard.
@@ -231,14 +231,14 @@ message.watermark.text.font.size.welcome=The text is set. Specify the font size.
 message.watermark.position.welcome=<b>Step {0}. You need to determine the position of the watermark relative to the original video. \
 In which corner or center to place the watermark</b>
 message.watermark.text.color.welcome=<b>Step 3. Choose a text color</b>
-message.watermark.created=<b>Great! The watermark is configured</b>. Now send me a video for adding the watermark.
-message.watermark.ok.welcome=I watermark any video with a picture or text. Send me a video to get started.
+message.watermark.created=<b>Great! The watermark is configured</b>. Now send me a video or direct link to a video for adding the watermark.
+message.watermark.ok.welcome=I watermark any video with a picture or text. Send me a video or direct link to a video to get started.
 change.watermark.command.name=\u270f\ufe0fEdit
 message.watermark.image.welcome=<b>Step 2. Send an image for the watermark</b>
 message.incorrect.watermark.position=Select the position of the watermark on the keyboard
 message.incorrect.watermark.color=Choose the watermark color on your keyboard
 message.incorrect.watermark.type=<b>Step 1. Are we setting up a watermark from a picture or text? Select on the keyboard</b>
-message.incorrect.video.file=Send me a video to add the watermark
+message.incorrect.video.file=Send me a video or direct link to a video to add the watermark
 message.incorrect.watermark.image.height=Select the height of the watermark on your keyboard
 message.watermark.image.height.welcome=Select the height of the watermark
 message.incorrect.font.size=Select the font size on the keyboard
@@ -280,4 +280,7 @@ message.dont.change=Don't change
 message.choose.edit.settings=At first choose desired settings on the keyboard
 message.video.edit.result.size=Original size: <b>{0}</b>\n\
 Result size: <b>{1}</b>
-message.only.url.can.be.uploaded=You have not sent a link to the video
+message.only.media.from.link.can.be.uploaded=You have not sent a direct link to a video
+message.incorrect.media.link=I can't download the video from this link. <b>Send me direct link to a video.</b> \
+If you think it is a bug then report it to <a href="https://t.me/smart_file_utils_support">Customer service</a>
+message.unsupported.media.source=<b>Links to YouTube, TikTok are not supported yet</b>
