--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -35,7 +35,7 @@ report.command.description=Xato haqida xabar bering
 message.choose.type=Konvertatsiya qilish uchun klaviaturadan turini tanlang
 message.convert.file=Ishni boshlash uchun menga fayl, havola, matn, video yoki audio xabar yuboring
 message.convert.document.file=Ishni boshlash uchun menga fayl, havola yoki matn yuboring
-message.convert.video.file=Boshlash uchun menga audio xabar yuboring
+message.convert.video.file=Boshlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
 message.convert.audio.file=Boshlash uchun menga audioni yuboring
 message.conversion.failed=Nimadir noto'g'ri bajarildi. So'rovni hozirda ko'rib bo'lmaydi. \
 Muammo tez orada hal qilinadi va fayl yuboriladi. <b>Sabr qilganingiz uchun tashakkur</b>. \
@@ -106,7 +106,7 @@ message.audio.compress.opus.estimated.size=Siqilgandan keyingi o''lcham: <b>{0}<
 message.audio.compress.original.size=Siqishdan oldin o''lcham: <b>{0}</b>
 message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
-message.video.edit.welcome=Menga tahrirlash uchun video yuboring. Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. \
+message.video.edit.welcome=Menga tahrirlash uchun video yoki to'g'ridan-to'g'ri video havolasini yuboring. Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. \
 Video haqida ma'lumot olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
 message.video.edit.settings=Videoni tahrirlash sozlamalari\n\n\
 Qaror: <b>{0}</b>\n\
@@ -115,7 +115,7 @@ message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va
 edit.video.command.description=Videoni tahrirlash
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
 message.resolution.selected=Ruxsat tanlandi
-message.send.video.to.edit=Avval tahrirlash uchun menga videoni yuboring
+message.send.video.to.edit=Avval tahrirlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
 message.video.will.be.edited=Video o''zgartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
 video.editing.step=tahrirlash
@@ -146,7 +146,7 @@ Bir vaqtning o''zida maksimal <b>{0} audio va {1}subtitrlar</b> bilan ishlashim 
 message.vavmerge.awaiting.audio.subtitles=Video bilan birlashtirish uchun menga <b>audio yoki subtitrlar</b> yuboring
 message.vavmerge.awaiting.video=Birlashtirish uchun menga <b>video</b> yuboring
 vavmerge.command.name=Birlashtirish
-message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yoki subtitrlar yuboring.
+message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video yoki to'g'ridan-to'g'ri video havolasini va audio yoki subtitrlar yuboring.
 message.video.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
 \ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
 \ud83d\udca1<b>Subtitr formati</b> videodan subtitrlarni chiqarish uchun. Masalan: <b>ASS, SRT, WEBVTT</b> va boshqalar.\n\
@@ -180,7 +180,7 @@ Uzunlik: <b>{3}</b>\n\
 Hajmi: <b>{4}</b>\n\
 Audio oqimlar soni: <b>{5}</b>\n\
 Subtitrlar soni: <b>{6}</b>
-message.non.command.video.features.header=Boshlash uchun menga video yuboring va tanlang:
+message.non.command.video.features.header=Boshlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring va tanlang:
 message.non.command.audio.features.header=Boshlash uchun menga audio yuboring va tanlang:
 message.vmake.queued=Video audio va rasmdan <b>{0}</b> formatida yaratiladi\n\
 Global navbatdagi joy: <b>{1}</b>
@@ -203,8 +203,10 @@ message.invalid.video.note.candidate.format=\u2757\ufe0fDumaloq videoni faqat <b
 Videongizning formati <b>{0}</b>. Avval ushbu videoni <b>MP4</b> formatiga o''tkazishingiz kerak.
 message.invalid.video.note.candidate.size=\u2757\ufe0fDairesel video faqat <b>8MB</b> gacha bo''lgan videolardan yaratilishi mumkin. Video o''lchamingiz: <b>{0}</b>. \
 /vcut buyrug''i yordamida videoni siqish yoki qisqartirish kerak.
-message.invalid.video.note.candidate.dimension=\u2757\ufe0fVideo annotatsiyasini faqat <b>kvadrat video</b> dan yaratish mumkin. Videoning kengligi va balandligi: <b>{0}</b>. \
-<b>To''rtburchakli videoni</b> yaratish uchun videoni menga qayta yuboring va klaviaturada <b>SQUARE</b> ni tanlang.
+message.invalid.video.note.candidate.dimension=\u2757\ufe0fVideo annotatsiyasini faqat <b>kvadrat video</b> dan yaratish mumkin. \
+Videoning kengligi va balandligi: <b>{0}</b>. \
+<b>To''rtburchakli video</b> yaratish uchun videoni qayta yuboring yoki to''g''ridan-to''g''ri video havolasini menga yuboring \
+va klaviaturangizda <b>SQUARE</b> ni tanlang.
 message.invalid.video.note.length=\u2757\ufe0fDumaloq videoni faqat <b>60 soniyadan</b> oshmaydigan videolardan yaratish mumkin. \
 Videoning uzunligi: <b>{0}</b> soniyadan. Videoni qisqartirish uchun /vcut buyrug''idan foydalaning.
 message.audio.streams.not.found=\u2757\ufe0fUshbu videoda chiqarib olish uchun audio yo'q
@@ -231,14 +233,14 @@ message.watermark.text.font.size.welcome=Matn o'rnatilgan. Shrift hajmini ko'rsa
 message.watermark.position.welcome=<b>{0} qadam. Filigraning asl videoga nisbatan o''rnini aniqlashingiz kerak. \
 Filigrani qaysi burchakda yoki markazda joylashtirish kerak</b>
 message.watermark.text.color.welcome=<b>Qadam 3. Matn rangini tanlang</b>
-message.watermark.created=<b>Zo'r! Filigran tuzilgan</b>. Endi menga moybo'yoqli qo'shish uchun video yuboring.
-message.watermark.ok.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman. Boshlash uchun menga video yuboring.
+message.watermark.created=<b>Zo'r! Filigran tuzilgan</b>. Endi menga moybo'yoqli qo'shish uchun video yoki to'g'ridan-to'g'ri video havolasini yuboring.
+message.watermark.ok.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman. Boshlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring.
 change.watermark.command.name=\u270f\ufe0fTahrirlash
 message.watermark.image.welcome=<b>Qadam 2. Suv belgisi uchun rasm yuboring</b>
 message.incorrect.watermark.position=Klaviaturada moybo'yoqli joyni tanlang
 message.incorrect.watermark.color=Klaviaturada moybo'yoqli rangni tanlang
 message.incorrect.watermark.type=<b>Qadam 1. Biz rasm yoki matndan suv belgisi o'rnatayapmizmi? Klaviaturadan tanlang</b>
-message.incorrect.video.file=Filigrani qo'shish uchun menga video yuboring
+message.incorrect.video.file=Filigrani qo'shish uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
 message.incorrect.watermark.image.height=Klaviaturadagi suv belgisi balandligini tanlang
 message.watermark.image.height.welcome=Filigraning balandligini tanlang
 message.incorrect.font.size=Klaviaturada shrift hajmini tanlang
@@ -274,7 +276,7 @@ message.add.subtitles.mode=Subtitrlar qo'shish
 message.replace.audio.mode=Audio almashtiring
 message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
-message.only.url.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
+message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
 vedit.resolution.command.name=O'lchamlari
 vedit.crf.command.name=Crf(Sifati)
 message.crf.selected=Crf tanlandi
@@ -283,3 +285,6 @@ message.dont.change=O'zgartirmang
 message.choose.edit.settings=Birinchidan, klaviaturada kerakli sozlamalarni tanlang
 message.video.edit.result.size=Asl hajmi: <b>{0}</b>\n\
 Natija hajmi: <b>{1}</b>
+message.incorrect.media.link=Videoni ushbu havoladan yuklab ololmayapman. <b>Menga videoning to'g'ridan-to'g'ri havolasini yuboring.</b> \
+Agar bu xato deb o'ylasangiz, iltimos, biz bilan <a href="https://t.me/smart_file_utils_support">qo'llab-quvvatlash jamoasi</a> bilan bog'laning
+message.unsupported.media.source=<b>YouTube, TikTok-ga havolalar hali qo'llab-quvvatlanmaydi</b>
