--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -284,3 +284,5 @@ message.only.media.from.link.can.be.uploaded=You have not sent a direct link to 
 message.incorrect.media.link=I can't download the video from this link. <b>Send me direct link to a video.</b> \
 If you think it is a bug then report it to <a href="https://t.me/smart_file_utils_support">Customer service</a>
 message.unsupported.media.source=<b>Links to YouTube, TikTok are not supported yet</b>
+message.copyright=This material may be protected by copyright. <a href="https://teletype.in/@massbots/r1oh2ppur">More details</b>. \
+If this material infringes your rights, please report: gadjievsaid.1995@gmail.com
