--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -283,3 +283,5 @@ message.video.edit.result.size=Оригинальный размер: <b>{0}</b>
 message.incorrect.media.link=Я не могу скачать видео по этой ссылке. <b>Отправьте мне прямую ссылку на видео.</b> \
 Если вы думаете что это ошибка, напишите нам в <a href="https://t.me/smart_file_utils_support">Группу поддержки</a>
 message.unsupported.media.source=<b>Ссылки на YouTube, TikTok пока не поддерживаются</b>
+message.copyright=Этот материал может быть защищен авторским правом. <a href="https://teletype.in/@massbots/r1oh2ppur">Подробнее</b>. \
+Если этот материал нарушает ваши права, сообщите об этом: gadjievsaid.1995@gmail.com
