instagram ссылки пока не поддерживаем

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -287,7 +287,7 @@ message.video.edit.result.size=Asl hajmi: <b>{0}</b>\n\
 Natija hajmi: <b>{1}</b>
 message.incorrect.media.link=Videoni ushbu havoladan yuklab ololmayapman. <b>Menga videoning to'g'ridan-to'g'ri havolasini yuboring.</b> \
 Agar bu xato deb o'ylasangiz, iltimos, biz bilan <a href="https://t.me/smart_file_utils_support">qo'llab-quvvatlash jamoasi</a> bilan bog'laning
-message.unsupported.media.source=<b>YouTube, TikTok-ga havolalar hali qo'llab-quvvatlanmaydi</b>
+message.unsupported.media.source=<b>YouTube, Instagram, TikTok-ga havolalar hali qo'llab-quvvatlanmaydi</b>
 message.copyright=Ushbu material mualliflik huquqi bilan himoyalangan bo'lishi mumkin. \
 <a href="https://teletype.in/@massbots/r1oh2ppur">Batafsil ma'lumot</b>. \
 Agar ushbu material sizning huquqlaringizni buzsa, iltimos, xabar bering: gadjievsaid.1995@gmail.com
