--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -281,7 +281,7 @@ message.choose.edit.settings=At first choose desired settings on the keyboard
 message.video.edit.result.size=Original size: <b>{0}</b>\n\
 Result size: <b>{1}</b>
 message.only.media.from.link.can.be.uploaded=You have not sent a direct link to a video
-message.incorrect.media.link=I can't download the video from this link. <b>Send me direct link to a video.</b> \
+message.incorrect.media.link=I can't download a video from this link. <b>Send me direct link to a video.</b> \
 If you think it is a bug then report it to <a href="https://t.me/smart_file_utils_support">Customer service</a>
 message.unsupported.media.source=<b>Links to YouTube, TikTok, Instagram are not supported yet</b>
 message.copyright=<i>This material may be protected by copyright. <a href="https://teletype.in/@massbots/r1oh2ppur">More details</a>. \
