Фиксы после отладки

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -83,8 +83,7 @@ message.pdf.images.unzip.bot=Bu erda barcha rasmlar bilan arxivdan. \
 Oldini olish uchun fotosuratlarni to'g'ridan-to'g'ri yuborolmayman telegram flood wait. \
 Siz uni @SmartUnzipperBot-dan yuklab olishingiz mumkin.
 message.concatenate.files.welcome=<b>{0}</b> fayllarini yuboring va tugagandan so''ng birlashish uchun klaviaturadan <b>Birlashtirish</b> ni tanlang. \
-Men qila olmayman bir vaqtning o''zida ko''proq <b>{1}</b> ta faylni birlashtirish.\n\n\
-<b>Ogohlantirish</b>:\nYangi fayllarni topshirmang, aks holda joriy so''rov bekor qilinadi.
+Men qila olmayman bir vaqtning o''zida ko''proq <b>{1}</b> ta faylni birlashtirish.
 concatenate.command.name=Birlashtirish
 concatenate.command.description=PDF fayllarini birlashtirish
 message.concatenate.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga <b>{0}</b> fayllarini yuboring.
@@ -214,7 +213,7 @@ message.subtitle.streams.not.found=\u2757\ufe0fUshbu videoda subtitrlar yo'q
 message.choose=Tanlang:
 cut.video.command.description=videoni qisqartirish
 audio.media.type.name=audioni
-video.media.type.name=videoni
+video.media.type.name=video yoki to'g'ridan-to'g'ri video havolasi
 message.choose.audio.language=Videongizda turli tillarda bir nechta audio oqimlar mavjud. \
 Siz chiqarishni xohlagan klaviatura audio tilini tanlash uchun <b>Tillar</b> tugmasini bosing yoki <b>Barchasini ajratib oling</b> \
 tugmasini bosing barcha audiolarni chiqarish uchun:
