--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,8 +98,7 @@ extra.message.dont.send.new.request=Please don't send a new file until your last
 message.pdf.images.unzip.bot=Here is the archive with all images. I can't send all images directly to avoid telegram flood wait. \
 You can extract it with @SmartUnzipperBot.
 message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished choose <b>Merge</b> on the keyboard. I can''t \
-concatenate more than <b>{1}</b> files at a time.\n\n\
-<b>Warning</b>:\nDon't send new files, otherwise the current request will be canceled.
+concatenate more than <b>{1}</b> files at a time.
 concatenate.command.name=Merge
 concatenate.command.description=Merge pdf files
 message.concatenate.no.files=You haven''t sent files to merge. Send me <b>{0}</b> files at first.
@@ -212,7 +211,7 @@ message.subtitle.streams.not.found=\u2757\ufe0fThere are no subtitles in this vi
 message.choose=Choose:
 cut.video.command.description=cut video
 audio.media.type.name=audio
-video.media.type.name=video
+video.media.type.name=video or direct link to a video
 message.choose.audio.language=There are multiple audio streams with different languages in your video. \
 Choose <b>Languages</b> button to choose language of the audio on the keyboard which you want to extract or choose <b>Extract all</b> button \
 to extract all audios:
