Фиксы после отладки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -264,7 +264,8 @@ vmerge.command.description=merge videos
 cut.audio.command.description=cut audio
 amerge.command.description=merge audios
 message.merge.settings=Choose merge settings on the keyboard and click <b>Start</b>\n\n\
-Audios: <b>{0}</b>\n\
+Video: <b>1</b>\n\
+Audio: <b>{0}</b>\n\
 Subtitles: <b>{1}</b>
 message.add.audio.mode=Add audio
 message.add.subtitles.mode=Add subtitles
