--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -263,6 +263,7 @@ cut.audio.command.description=обрезать аудио
 amerge.command.description=объединить аудио
 message.stream.language=Язык: <b>{0}</b>\n\nЕсли язык не совпадает с тем что в файле значит <b>проблема в вашем видео, а не во мне</b>. Язык берется из метаданных видео.
 message.merge.settings=Выберите настройки для объединения и нажмите <b>Начать</b>\n\n\
+Видео: <b>1</b>\n\
 Аудио: <b>{0}</b>\n\
 Субтитры: <b>{1}</b>
 message.add.audio.mode=Добавить аудио
