--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -267,7 +267,8 @@ vmerge.command.description=video fayllarni birlashtirish
 cut.audio.command.description=ovozni qisqartirish
 amerge.command.description=ovozni birlashtirish
 message.stream.language=Til: <b>{0}</b>\n\nAgar til faylga mos kelmasa, u holda muammo menda emas, balki sizning videoingizda. Til video meta-ma''lumotlardan olingan.
-message.merge.settings=Birlashtiriladigan sozlamalarni tanlang va <b>Ishni boshlash</b> tugmasini bosing\n\n \
+message.merge.settings=Birlashtiriladigan sozlamalarni tanlang va <b>Ishni boshlash</b> tugmasini bosing\n\n\
+Video: <b>1</b>\n\
 Audio: <b>{0}</b>\n\
 Taglavhalar: <b>{1}</b>
 message.add.audio.mode=Audio qo'shish
