Своя ссылка на копи райт

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -283,5 +283,5 @@ message.video.edit.result.size=Оригинальный размер: <b>{0}</b>
 message.incorrect.media.link=Я не могу скачать видео по этой ссылке. <b>Отправьте мне прямую ссылку на видео.</b> \
 Если вы думаете что это ошибка, напишите нам в <a href="https://t.me/smart_file_utils_support">Группу поддержки</a>
 message.unsupported.media.source=<b>Ссылки на YouTube, TikTok, Instagram пока не поддерживаются</b>
-message.copyright=<i>Этот материал может быть защищен авторским правом. <a href="https://teletype.in/@massbots/r1oh2ppur">Подробнее</a>. \
+message.copyright=<i>Этот материал может быть защищен авторским правом. <a href="https://telegra.ph/Copyright-Claims-07-20">Подробнее</a>. \
 Если этот материал нарушает ваши права, сообщите об этом</i>: gadjievsaid.1995@gmail.com
