--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -289,5 +289,5 @@ message.incorrect.media.link=Videoni ushbu havoladan yuklab ololmayapman. <b>Men
 Agar bu xato deb o'ylasangiz, iltimos, biz bilan <a href="https://t.me/smart_file_utils_support">qo'llab-quvvatlash jamoasi</a> bilan bog'laning
 message.unsupported.media.source=<b>YouTube, Instagram, TikTok-ga havolalar hali qo'llab-quvvatlanmaydi</b>
 message.copyright=<i>Ushbu material mualliflik huquqi bilan himoyalangan bo'lishi mumkin. \
-<a href="https://teletype.in/@massbots/r1oh2ppur">Batafsil ma'lumot</a>. \
+<a href="https://telegra.ph/Copyright-Claims-07-20">Batafsil ma'lumot</a>. \
 Agar ushbu material sizning huquqlaringizni buzsa, iltimos, xabar bering</i>: gadjievsaid.1995@gmail.com
